@@ -1,3 +1,6 @@
+  27 Sep 2014; Michael Weber <xmw@gentoo.org> pylibpcap-0.6.4-r1.ebuild:
+  add examples
+
 *pylibpcap-0.6.4-r1 (27 Sep 2014)
 
   27 Sep 2014; Michael Weber <xmw@gentoo.org> +metadata.xml,
